fix: update CORS configuration and externalize JWT properties in application.yml